--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Free QRcode maker">
-    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Free QRcode maker" />
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
     <title>QRCode maker</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+  </head>
+  <body>
     <div class="parent">
-        <img src="logo.png" alt="QRCode" >
-        <input type="text" placeholder="Set the Value">
-        <button>Create</button>
-        <div class="icons">
-            <div><i id="facebook" class="fa-brands fa-facebook"></i></div>
-            <div><i id="github" class="fa-brands fa-github"></i></div>
-            <div><i id="twitter" class="fa-brands fa-twitter"></i></div>
-            <div><i id="linkedin" class="fa-brands fa-linkedin"></i></div>
-        </div>
+      <img src="logo.png" alt="QRCode" />
+      <input type="text" placeholder="Set the Value" />
+      <button>Create</button>
+      <div class="icons">
+        <div><i id="facebook" class="fa-brands fa-facebook"></i></div>
+        <div><i id="github" class="fa-brands fa-github"></i></div>
+        <div><i id="twitter" class="fa-brands fa-twitter"></i></div>
+        <div><i id="linkedin" class="fa-brands fa-linkedin"></i></div>
+      </div>
     </div>
-    
 
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
